# emacs-jabber

./: .gear-rules  .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  configure.ac  emacs-jabber-active-accounts.patch  emacs-jabber-jc.patch  emacs-jabber-log.patch  emacs-jabber-long-actions-2.diff  emacs-jabber-long-actions.diff  emacs-jabber-uri-handler  emacs-jabber.spec  filetransfer.txt  fsm.el  jabber-activity.el  jabber-ahc-presence.el  jabber-ahc.el  jabber-alert.el  jabber-autoaway.el  jabber-autoloads.stub  jabber-avatar.el  jabber-awesome.el  jabber-bookmarks.el  jabber-browse.el  jabber-carbons.el  jabber-chat.el  jabber-chatbuffer.el  jabber-chatstates.el  jabber-clean.el  jabber-compose.el  jabber-conn.el  jabber-console.el  jabber-core.el  jabber-disco.el  jabber-emacs.el  jabber-events.el  jabber-export.el  (+53 more)
.gear/: merge  rules
.gear/tags/: list
debian/: changelog  control  emacsen-install.template  emacsen-remove.in  emacsen-startup  rules
emacs-jabber/: AUTHORS  Makefile.am  NEWS  README  configure.ac  jabber-activity.el  jabber-ahc-presence.el  jabber-alert.el  jabber-autoaway.el  jabber-avatar.el  jabber-bookmarks.el  jabber-chat.el  jabber-chatbuffer.el  jabber-chatstates.el  jabber-compose.el  jabber-conn.el  jabber-core.el  jabber-disco.el  jabber-events.el  jabber-ft-server.el  jabber-history.el  jabber-iq.el  jabber-keepalive.el  jabber-keymap.el  jabber-libnotify.el  jabber-logon.el  jabber-menu.el  jabber-muc-nick-completion.el  jabber-muc.el  jabber-newdisco.el  jabber-osd.el  jabber-presence.el  jabber-ratpoison.el  jabber-register.el  jabber-roster.el  jabber-sasl.el  jabber-sawfish.el  jabber-screen.el  jabber-si-client.el  jabber-socks5.el  (+11 more)
emacs-jabber/CVS/: Entries  Repository
emacs-jabber/compat/CVS/: Entries  Repository
emacs-jabber/debian/: copyright  emacsen-startup
emacs-jabber/debian/CVS/: Entries
emacs-jabber/emacs-jabber/: NEWS  fsm.el  jabber-ahc.el  jabber-bookmarks.el  jabber-export.el  jabber-ft-server.el  jabber-history.el  jabber-keepalive.el  jabber-keymap.el  jabber-modeline.el  jabber-sasl.el  jabber-time.el  jabber-vcard.el  jabber-version.el  jabber-widget.el  jabber-xml.el
emacs-jabber/emacs-jabber/CVS/: Entries
emacs-jabber/emacs-jabber/debian/: emacsen-install.in  emacsen-remove.template
emacs-jabber/emacs-jabber/debian/CVS/: Entries  Repository
emacs-jabber/gconf/CVS/: Entries  Repository
emacs-jabber/m4/CVS/: Entries  Repository  Root
emacs-jabber/tests/: Makefile.am
emacs-jabber/tests/CVS/: Entries  Repository
external-notifiers/: jabber-ratpoison.el  jabber-sawfish.el
gconf/: Makefile.am  emacs-jabber.schemas.in
jabber-fallback-lib/: fsm.el  srv.el
m4/: emacs-lib.m4
tests/: .gitignore  Makefile.am  caps-hash.el  history.el  jabberd.el  load-all.el  nick-change-fail.el  parse-next-stanza.el  roster-display-qc.el  roster-display.el  roster-display.hs  skip-tag-forward.el
